--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
       <div class="about-grid">
         <div class="frame">
           <img
-            src="https://images.unsplash.com/photo-1559339352-11d035aa65de?auto=format&fit=crop&w=1000&q=80"
+            src="gioia.terasse.webp"
             alt="Intérieur du restaurant Gioia"
           />
           <div class="badge">
