--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       position:absolute; inset:0;
       background:
         linear-gradient(to bottom, rgba(14,42,71,.70), rgba(14,42,71,.50), rgba(14,42,71,.80)),
-        url("https://images.unsplash.com/photo-1544148103-0773bf10d330?q=80&w=2070&auto=format&fit=crop") no-repeat center center;
+        url("caption.webp") no-repeat center center;
       background-size: cover;
       transform: scale(1.02);
     }
