--- a/index.html
+++ b/index.html
@@ -1178,7 +1178,7 @@
         <div>
           <div class="brand" style="margin-bottom:12px;">
             <div class="logo-wrap" aria-hidden="true">
-              <img src="img/gioia_logo.png" alt="Gioia Logo" onerror="this.src='https://placehold.co/100x100?text=Gioia'">
+              <img src="img/gioia_logo.png" alt="Gioia Logo" onerror="this.src='gioia_logo.webp'">
             </div>
             <span class="serif italic" style="font-size:24px;">Gioia</span>
           </div>
