--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
       <div class="nav-row">
         <div class="brand">
           <div class="logo-wrap" aria-hidden="true">
-            <img src="img/gioia_logo.png" alt="Gioia Logo" onerror="this.src='https://placehold.co/100x100?text=Gioia'">
+            <img src="img/gioia_logo.png" alt="Gioia Logo" onerror="this.src='gioia_logo.webp'">
           </div>
         </div>
 
